# gemini_geometry_detector

./: CMakeLists.txt  README.md  package.xml
config/: color_thresholds.yaml  detector.yaml  ground_segmentation.yaml
docs/: color_region_detector.md  depth_guide_line_estimator.md  rectangle_guide_line_estimator.md
include/gemini_geometry_detector/: camera_intrinsics.h  color_region_detector.h  depth_guide_line_estimator.h  depth_projector.h  fit_line_guide_line_estimator.h  ground_plane_provider_interface.h  guide_line_estimator.h  guide_line_estimator_interface.h  hybird_preprocessor.h  hybrid_ground_segmenter.h  imu_gravity_estimator.h  imu_ground_plane_provider.h  rectangle_guide_line_estimator.h  topic_ground_plane_provider.h
launch/: color_detector.launch  color_detector_rviz.launch  compare_point_clouds.launch
msg/: Contour3DArray.msg  Contour3DInfo.msg  ContourArray.msg  ContourInfo.msg  GuideLineError.msg
rviz/: color_detector.rviz  compare_clouds.rviz
src/: color_region_detector.cpp  color_region_detector_node.cpp  depth_guide_line_estimator.cpp  depth_projector.cpp  fit_line_guide_line_estimator.cpp  guide_line_estimator.cpp  hybird_preprocessor.cpp  hybrid_ground_segmenter.cpp  imu_gravity_estimator.cpp  imu_ground_plane_provider.cpp  rectangle_guide_line_estimator.cpp  topic_ground_plane_provider.cpp
